--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,15 @@
+/*Start of Олександр ALEKS code*/
+/*End of Олександр ALEKS code*/
+
+/*Start of WhyChoseUs+AboutUs*/
+/*End of WhyChoseUs+AboutUs*/
+
+/*Start of MidSeasonSale Olga Bondarenko*/
+/*End of MidSeasonSale Olga Bondarenko*/
+
+/*Start of Discount */
+/*End of Discounr*/
+
 /*Start of Main Collection Koval*/
 .main-collection{
 	border: 2px solid black;
@@ -6,3 +18,12 @@
 	width: 200px;
 }
 /*End of Main Collection Koval*/
+
+/*Start of Deal of the month */
+/*End of Deal of the month */
+
+/*Start of New Arrivals */
+/*End of New Arrivals */
+
+/*Start of Footer*/
+/*End of Footer*/
