--- a/css/common.css
+++ b/css/common.css
@@ -8,11 +8,18 @@
 :root {
     --white-text-color: #FFFFFF;
     --red-text-color: #F40106;
-    --grey-text-color: rgba(255,255,255,0.65);
+    --grey-text-color: rgba(34, 35, 35, 0.46);
     --black-color: #222323;
-    --red-backg-color:#d60307;
+    --red-back-color:#d60307;
 }
 
 img {
     display: block;
+}
+
+h4 {
+    color: var(--grey-text-color);
+    font-family: 'Bebas Neue', cursive;
+    font-size: 24px;
+    font-weight: 400;
 }
