--- a/css/index-header.css
+++ b/css/index-header.css
@@ -1,15 +1,25 @@
 h1 {
     text-transform: uppercase;
-    color: var(--black-color);
+
     font-size: 124px;
     font-family: 'Bebas Neue', cursive;
     font-weight: 400;
+    color: var(--black-color);
+}
+
+.header__h1-red {
+    color: var(--red-text-color);
+}
+
+.header__contacts {
+    background-color: var(--red-back-color);
+    padding: 8px 40px;
 }
 
 h6, .header__contact {
     color: var(--white-text-color);
     font-size: 14px;
-    font-family "PT Sans", sans-serif;
+    font-family: 'PT Sans', sans-serif;
     font-weight: 700;
     text-decoration: none;
     margin: 5px 10px 0px 5px;
@@ -18,6 +28,10 @@ h6, .header__contact {
 
 .header__contact:hover {
     text-decoration: underline;
+}
+
+.header__menu {
+    padding: 30px 40px;
 }
 
 .header__logo {
@@ -36,4 +50,12 @@ h6, .header__contact {
 
 .header__social {
     margin: 12px;
+}
+
+.header__niger {
+    background-image: url(../img/niger.webp);
+    background-size: cover;
+    background-position: 50% 50%;
+    min-height: 600px;
+    padding: 210px 540px 210px 40px;
 }
