--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 @import url(common.css);
 @import url(index-header.css);
-@import url(index-main.css);
+@import url(index-main-about.css);
 @import url(index-footer.css);
 @import url(main-collection.css);
 @import url(index-null.css);
