--- a/css/index-main-about.css
+++ b/css/index-main-about.css
@@ -13,6 +13,7 @@
 
 .about__h2-red {
     color: var(--red-text-color);
+    background-color: rgba(0,0,0,0);
 }
 
 .about__divider {
@@ -33,4 +34,9 @@
     font-family: 'PT Sans', sans-serif;
     font-weight: 400;
     color: var(--white-text-color);
+}
+
+.about__social {
+    margin: 12px;
+    background-color: #FF0000;
 }
