--- a/css/index.css
+++ b/css/index.css
@@ -3,3 +3,4 @@
 @import url(index-main-about.css);
 @import url(main-collection.css);
 @import url(index-footer.css);
+@import url(why-choose-us.css);
