--- a/css/why-choose-us.css
+++ b/css/why-choose-us.css
@@ -35,6 +35,8 @@
     font-size: 20px;
     margin-bottom: 50px;
     text-align: center;
+    width: 100%;
+    max-width: 1170px;
 }
 
 .choose-us__flex-box {
@@ -52,7 +54,7 @@
     align-items: center;
     gap: 20px;
     padding: 20px 30px;
-    border: 1px solid #ebebeb;
+    border: 2px solid #ebebeb;
 }
 
 .flex-box__svg {
