--- a/css/index-header.css
+++ b/css/index-header.css
@@ -11,7 +11,7 @@ h1 {
     background-color: rgba(0,0,0,0);
 }
 
-.header__contacts {
+.header-contacts {
     background-color: var(--red-back-color);
     padding: 8px 40px;
 }
@@ -30,7 +30,7 @@ h1 {
     text-decoration: underline;
 }
 
-.header__menu {
+.header-menu {
     padding: 30px 40px;
     background-color: var(--black-color);
 }
@@ -54,8 +54,8 @@ h1 {
     background-color: #FFFFFF;
 }
 
-.header__niger {
-    background-image: url(../img/niger.webp);
+.header-niger-1 {
+    background-image: url(../img/backgrounds/niger-1.jpg);
     background-size: cover;
     background-position: 50% 50%;
     min-height: 100%;
