Discount classes corrections

--- a/css/index-header.css
+++ b/css/index-header.css
@@ -59,7 +59,7 @@
     background-size: cover;
     background-position: 50% 50%;
     min-height: 100%;
-    padding: 210px 540px 210px 40px;
+    padding: 210px 40% 210px 40px;
 }
 
 .header__link-button {
