rename .css: index-main-sale.css, index-main-choose.css

--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,8 @@
 @import url(common.css);
 @import url(index-header.css);
-@import url(why-choose-us.css);
+@import url(index-main-choose.css);
 @import url(index-main-about.css);
-@import url(sale.css);
+@import url(index-main-sale.css);
 @import url(index-main-discount.css);
 @import url(index-main-collection.css);
 @import url(index-footer.css);
