delete font-family Bebas Neue in header, about, choose, collection, discount

--- a/css/index-main-collection.css
+++ b/css/index-main-collection.css
@@ -38,7 +38,6 @@
 @media (min-width: 320px) {
 	.text__title {
 	font-size:38px;
-	font-family: "Bebas Neue";
 	font-weight: 400;
 	color: #222323;
 	line-height: 40px;
@@ -66,7 +65,7 @@
 }
 
 .text__subtitle {
-	font-family: "PT Sans";
+	font-family: "PT Sans", sans-serif;
 	color: var(--gray-color);
 	font-size: 20px;
 }
@@ -85,7 +84,7 @@ border-bottom: 1px solid rgba(145, 145, 145, 0.467);
 }
 .shop__list li{
 font-size: 16px;
-font-family: "PT Sans";
+font-family: "PT Sans", sans-serif;
 color:#a7a7a7;
 position: relative;
 list-style: none;
@@ -164,7 +163,7 @@ padding: 0px 10px;
 
 .card__text {
 	font-size: 18px;
-	font-family: "PT Sans";
+	font-family: "PT Sans", sans-serif;
 	color:var(--gray-color);	
 	text-transform: capitalize;
 	margin: 0px 0px 30px 0px;
@@ -174,7 +173,7 @@ text-decoration:underline;
 }
 .card__price {
 	font-size: 18px;
-	font-family: "PT Sans";
+	font-family: "PT Sans", sans-serif;
 	color: var(--red-text-color);
 	font-weight: 600;
 	margin: 0px 0px 20px 0px;
@@ -182,7 +181,7 @@ text-decoration:underline;
 .card__link{
 	display: inline-block;
 	font-size: 15px;
-	font-family: "PT Sans";
+	font-family: "PT Sans", sans-serif;
 	color: #fff;
 	max-width: 150px;
 	font-weight: 500;
