--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,5 @@
 @import url(common.css);
+@import url(index-null.css);
 @import url(index-header.css);
 @import url(index-main-choose.css);
 @import url(index-main-about.css);
