--- a/css/index-header.css
+++ b/css/index-header.css
@@ -2,55 +2,95 @@
     text-transform: uppercase;
     font-size: 124px;
     font-weight: 400;
-    color: var(--black-color);
+    color: var(--dark-color);
 }
 
-.header__h1-red {
-    color: var(--red-text-color);
+.header__h1-accent {
+    color: var(--accent-text-color);
     background-color: rgba(0,0,0,0);
 }
 
 .header-contacts {
-    background-color: var(--red-back-color);
-    padding: 8px 40px;
+    background-color: var(--accent-back-color);
+    height: 48px;
+    display: none;
+}
+
+@media (min-width: 990px) {
+.header-contacts {
+    display: block;
+}
+}
+
+.header__container {
+    display: grid;
+    vertical-align: bottom;
+    grid-template-columns: 5fr 1fr 1fr;
+    padding: 12px;
 }
 
 .header__h6, .header__contact {
-    color: var(--white-text-color);
+    color: var(--light-color);
     font-size: 14px;
     font-family: 'PT Sans', sans-serif;
     font-weight: 700;
     text-decoration: none;
-    margin: 5px 10px 0px 5px;
     display: block;
+}
+
+.header__contact {
+    text-align: right;
 }
 
 .header__contact:hover {
     text-decoration: underline;
+    text-decoration-thickness: 2px;
 }
 
 .header-menu {
-    padding: 30px 40px;
-    background-color: var(--black-color);
+    background-color: var(--dark-color);
+}
+
+.menu__container {
+    display: grid;
+    grid-template-columns: 1fr 4fr 1fr;
+    padding: 12px;
+}
+
+.header-logo__container {
+    margin: auto 0;
 }
 
 .header__logo {
-    margin: 20px;
+    margin: 0;
+    width: 165px;
+}
+
+.header-links {
+    margin: auto 0;
 }
 
 .header__link {
-    color: var(--white-text-color);
+    color: var(--light-color);
     font-family: "PT Sans", sans-serif;
     font-size: 16px;
     font-weight: 700;
     text-decoration: none;
-    margin: 12.5px 20px;
-    display: block;
+    margin: 12px 20px;
+}
+
+.header-socials {
+    margin: auto;
+    margin-right: 0;
+    text-align: right;
+    height: 30px;
 }
 
 .header__social {
-    margin: 12px;
-    background-color: #FFFFFF;
+    background-color: var(--light-color);
+    width: 30px;
+    height: 30px;
+    margin: 0;
 }
 
 .header-niger {
@@ -62,11 +102,21 @@
 }
 
 .header__link-button {
-    background-color: #FF0000;
+    background-color: var(--accent-signal-color);
     padding: 16px 32px;
-    color: var(--white-text-color);
+    color: var(--light-color);
     font-family: "PT Sans", sans-serif;
     font-size: 18px;
     font-weight: 700;
     text-decoration: none;
+}
+
+.header__link-button:hover {
+    background-color: var(--dark-color);
+}
+
+.header__h4 {
+    color: var(--secondary-text-color);
+    font-size: 24px;
+    font-weight: 400;
 }
