--- a/css/index-main-sale.css
+++ b/css/index-main-sale.css
@@ -1,7 +1,7 @@
 .sale__cards {
     display: flex;
     gap: 20px;
-    /* flex-wrap: wrap; */
+    flex-wrap: wrap;
     justify-content: center;
   }
   
