--- a/css/index-main-discount.css
+++ b/css/index-main-discount.css
@@ -1,8 +1,20 @@
 .discount__h1 {
     text-transform: uppercase;
-    font-size: 124px;
+    font-size: 62px;
     font-weight: 400;
-    color: var(--white-text-color);
+    color: var(--light-text-color);
+}
+
+@media (min-width: 660px) {
+    .discount__h1 {
+        font-size: 93px;
+    }
+}
+
+@media (min-width: 990px) {
+    .discount__h1 {
+        font-size: 124px;
+    }
 }
 
 .discount__h1-red {
