--- a/css/common.css
+++ b/css/common.css
@@ -10,6 +10,7 @@
   --secondary-text-color: rgba(33, 33, 33, 0.5);
 	--line:#e0e0e0;
 	--gray-color:#717474;
+  --dark-gray-color: #222323;
 }
 
 .base__container {
