--- a/css/index.css
+++ b/css/index.css
@@ -7,3 +7,4 @@
 @import url(index-main-discount.css);
 @import url(index-main-collection.css);
 @import url(index-footer.css);
+@import url(index-deal.css);
