--- a/css/index-deal.css
+++ b/css/index-deal.css
@@ -1,16 +1,10 @@
-body{ 
-    font-family:"PT+Sans",sans-serif;
-}
-:root{ 
-    --color-span: #f40106;
-}
 .deal__container{
     display: flex;
     height: 680px;
     padding: 55px 0 0 0;
 }
 .deal__content{ 
-    background-color: var(--dark-gray-color);
+    background-color: var(--dark-color);
     flex: 0 1 50%;
     padding: 110px 160px 170px 210px;
 }
@@ -24,22 +18,25 @@ body{
     line-height: 1;
 }
 .title-dot{ 
-    color: var(--color-span);
+    color: var(--accent-text-color);
 }
 .deal__text-price{ 
     font-size: 10px;
     color:var(--light-color);
     text-transform: uppercase;
     line-height: 27.2px;
+    font-family:"PT+Sans",sans-serif;
 }
 .deal__price{ 
-    color: var(--color-span);
+    color: var(--accent-text-color);
     font-size: 28px;
     line-height: 71px;
     font-weight: 700;
+    font-family:"PT+Sans",sans-serif;
 }
 .deal__crossed-out{ 
     font-size: 16px;
+    font-family:"PT+Sans",sans-serif;
 }
 .deal__text{ 
     font-size: 13px;
@@ -47,6 +44,7 @@ body{
     line-height: 20px;
     padding: 0 0 30px 0;
     font-weight: 500;
+    font-family:"PT+Sans",sans-serif;
 }
 .deal__link{ 
     font-size: 11px;
@@ -56,6 +54,7 @@ body{
     color: var(--light-color);
     display: inline-block;
     padding-bottom: 30px;
+    font-family:"PT+Sans",sans-serif;
 }
 /* .deal__link span{ 
     background: url(icons/Arrow.svg) right no-repeat;
@@ -64,6 +63,7 @@ body{
 .deal__countdown{ 
     display: flex;
     padding: 0 20px 0 0;
+    font-family:"PT+Sans",sans-serif;
 }
 .countdown:not(:last-child){ 
     margin: 0 20px 0 0;
