--- a/css/index-header.css
+++ b/css/index-header.css
@@ -61,7 +61,7 @@
 
 .menu__container {
     display: grid;
-    grid-template-columns: 1fr 4fr 1fr;
+    grid-template-columns: 180px 1fr 180px;
     padding: 12px;
 }
 
