Some hovers added

--- a/css/common.css
+++ b/css/common.css
@@ -8,6 +8,7 @@
   --accent-text-color: #F40106;
   --accent-back-color:#d60307;
   --secondary-text-color: rgba(33, 33, 33, 0.5);
+  --tertiary-text-color: rgba(255, 255, 255, 0.6);
 	--line:#e0e0e0;
 	--gray-color:#717474;
 }
