--- a/css/index-header.css
+++ b/css/index-header.css
@@ -46,18 +46,23 @@
     text-decoration-thickness: 2px;
 }
 
+.text-center {
+    text-align: center;
+}
+
 .header-menu {
     background-color: var(--dark-color);
 }
 
 .menu__container {
     display: grid;
-    grid-template-columns: 180px 1fr 180px;
+    grid-template-columns: 1fr 4fr 1fr;
     padding: 12px;
 }
 
 .header-logo__container {
     margin: auto 0;
+    z-index: 2;
 }
 
 .header__logo {
@@ -87,6 +92,51 @@
     display: none;
 }
 
+.navigation-burger {
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 22px;
+    padding: 10px;
+    cursor: pointer;
+    z-index: 5;
+    margin: auto 12px auto auto;
+  }
+.navigation-burger span,
+.navigation-burger::before,
+.navigation-burger::after {
+    position: absolute;
+    left: 0;
+    height: 2px;
+    width: 100%;
+    background-color: var(--light-color);
+    transition: all 0.5s ease-in-out;
+  }
+.navigation-burger span {
+    transform: scale(1);
+  }
+.navigation-burger::before,
+.navigation-burger::after {
+    content: " ";
+  }
+.navigation-burger::before {
+    top: 0;
+  }
+.navigation-burger::after {
+    bottom: 0;
+  }
+.navigation-burger.active span {
+    transform: scale(0);
+  }
+.navigation-burger.active::before {
+    top: 50%;
+    transform: rotate(-45deg);
+  }
+.navigation-burger.active::after {
+    bottom: 40%;
+    transform: rotate(45deg);
+  }
+
 @media (min-width: 990px) {
     .header-contacts {
         display: block;
@@ -100,6 +150,9 @@
     .header-socials {
         display: block;
     }
+    .navigation-burger {
+        display: none;
+      }
 }
 
 .header__social {
@@ -150,3 +203,23 @@
     font-size: 24px;
     font-weight: 400;
 }
+
+.navigation-wrapper {
+    position: fixed;
+    top: -100%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--dark-color);
+    z-index: 2;
+    transition: top 0.3s ease-in;
+    overflow: hidden;
+    margin: auto;
+    z-index: 1;
+    text-align: center !important;
+    padding-top: 80px;
+  }
+
+.navigation-wrapper.active {
+    top: 0;
+  }
