--- a/css/index-main-about.css
+++ b/css/index-main-about.css
@@ -1,13 +1,23 @@
 .about {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
 }
 
 .about-men {
     background-image: url(../img/backgrounds/men.jpg);
     background-size: cover;
-    background-position: 50% 50%;
-    min-height: 720px;
+    background-position: 50% 25%;
+    height: 360px;
+}
+
+@media (min-width: 660px) {
+    .about {
+    grid-template-columns: 1fr 1fr;        
+    }
+    .about-men {
+        background-position: 50% 50%;
+        min-height: 720px;
+    }
 }
 
 .about-description {
@@ -19,7 +29,7 @@
     width: 100%;
     max-width: 660px;
     margin: auto auto auto 0;
-    padding: 0 60px;
+    padding: 15px 15px 15px 30px;
 }
 
 .about__h2 {
