--- a/css/index-header.css
+++ b/css/index-header.css
@@ -34,10 +34,9 @@
     font-family: 'PT Sans', sans-serif;
     font-weight: 700;
     text-decoration: none;
-    display: block;
 }
 
-.header__contact {
+.grid__contact {
     text-align: right;
 }
 
@@ -81,13 +80,29 @@
     font-size: 16px;
     font-weight: 700;
     text-decoration: none;
-    margin: 12px 20px;
+    margin-top: 12px;
+}
+
+.header__link-underline {
+    --underline-length: 0px;
+    max-width: 80px;
+    margin: auto;
+}
+
+.header__link-underline:hover {
+    --underline-length: 100%;
+}
+
+.underline {
+    height: 2px;
+    margin-bottom: 12px;
+    width: var(--underline-length);
+    background-color: var(--light-color);
+    transition: 0.3s ease-in-out;
 }
 
 .header-socials {
-    margin: auto;
-    margin-right: 0;
-    text-align: right;
+    margin: auto 0 auto auto;
     height: 30px;
     display: none;
 }
@@ -141,12 +156,13 @@
     background-color: var(--light-color);
     width: 30px;
     height: 30px;
-    margin: 0;
+    margin: 0 6px 0 6px;
+    transition: 0.3s;
 }
 
 .header__social:hover {
     background-color: var(--accent-signal-color);
-    transition: 0.5s;
+    transition: 0.3s;
 }
 
 .header-niger {
@@ -166,16 +182,22 @@
         font-size: 124px;
     }
     .header-links {
-        display: block;
+        display: flex;
     }
     .header-socials {
         display: block;
+    }
+    .header__social {
+        margin: 0 0 0 12px;
     }
     .navigation-burger {
         display: none;
       }
     .header-niger {
-        height: 720px;
+        min-height: 720px;
+    }
+    .header__link-underline {
+        margin: 0 20px;
     }
 }
 
@@ -193,6 +215,7 @@
     font-size: 18px;
     font-weight: 700;
     text-decoration: none;
+    transition: 0.5s;
 }
 
 .header__link-button:hover {
@@ -218,7 +241,7 @@
     overflow: hidden;
     margin: auto;
     z-index: 1;
-    text-align: center !important;
+    text-align: center;
     padding-top: 80px;
   }
 
