--- a/css/index-main-about.css
+++ b/css/index-main-about.css
@@ -29,7 +29,19 @@
     width: 100%;
     max-width: 660px;
     margin: auto auto auto 0;
-    padding: 15px 15px 15px 30px;
+    padding: 16px;
+}
+
+@media (min-width: 990px) {
+    .about__container {
+        padding: 32px;
+    }
+}
+
+@media (min-width: 1350px) {
+    .about__container {
+        padding: 40px 15px 40px 40px;
+    }
 }
 
 .about__h2 {
@@ -52,6 +64,7 @@
     color: var(--light-color);
     margin-top: 20px;
     margin-bottom: 60px;
+    text-align: justify;
 }
 
 .about__p {
@@ -60,6 +73,7 @@
     font-weight: 400;
     color: var(--light-color);
     margin-bottom: 40px;
+    text-align: justify;
 }
 
 .about-socials {
@@ -67,15 +81,15 @@
 }
 
 .about__social {
-    margin: auto;
-    margin-right: 0;
+    margin: auto 6px;
     text-align: right;
     height: 30px;
     width: 30px;
     background-color: var(--accent-text-color);
+    transition: 0.3s;
 }
 
 .about__social:hover {
     background-color: var(--light-color);
-    transition: 0.5s;
+    transition: 0.3s;
 }
