--- a/css/index-main-discount.css
+++ b/css/index-main-discount.css
@@ -5,6 +5,32 @@
     color: var(--light-color);
 }
 
+.discount__link-button {
+    background-color: var(--light-color);
+    padding: 16px 32px;
+    color: var(--dark-color);
+    font-family: "PT Sans", sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    text-decoration: none;
+    transition: 0.3s;
+}
+
+.discount__link-button:hover {
+    background-color: var(--dark-color);
+    color: var(--light-color);
+    transition: 0.3s;
+}
+
+.discount-niger {
+    background-image: url(../img/backgrounds/niger-2.png);
+    background-size: cover;
+    background-position: 40% 50%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
 @media (min-width: 660px) {
     .discount__h1 {
         font-size: 93px;
@@ -15,36 +41,16 @@
     .discount__h1 {
         font-size: 124px;
     }
+    .discount-niger {
+        height: 720px;
+    }
 }
 
-.discount__link-button {
-    background-color: var(--light-color);
-    padding: 16px 32px;
-    color: var(--dark-color);
-    font-family: "PT Sans", sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    text-decoration: none;
-}
-
-.discount__link-button:hover {
-    background-color: var(--dark-color);
-    transition: 0.5s;
-    color: var(--light-color);
-}
-
-.discount-niger {
-    background-image: url(../img/backgrounds/niger-2.png);
-    background-size: cover;
-    background-position: 50% 50%;
-    min-height: 720px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-}
 
 .month__container {
-    width: 50%;
+    width: 60%;
+    padding-top: 40px;
+    padding-bottom: 40px;
 }
 
 .discount__h4 {
