--- a/css/index-main-sale.css
+++ b/css/index-main-sale.css
@@ -7,7 +7,8 @@
   
   .sale__card, .sale__card-img {
     width: 100%;
-    max-width: 230px;
+    min-width: 272px;
+
   }
   
   .sale__card {
@@ -24,7 +25,7 @@
   }
   
   .sale__card-price {
-    color: var(--red-text-color);
+    color: var(--accent-text-color);
     font-weight: 700;
   }
   
