--- a/css/index-main-collection.css
+++ b/css/index-main-collection.css
@@ -7,8 +7,6 @@
 .main-collection__about {
 	display: flex;
 	flex-direction: column;
-	font-family: "PT Sans", sans-serif;
-
 }
 .__conteiner {
 	max-width: 1170px;
@@ -28,7 +26,6 @@
 }
 .text__title::after{
 	content: "";
-	box-sizing: border-box;
 	display:inline-block;
 	width: 6px;
 	height: 6px;
@@ -40,17 +37,19 @@
 @media (min-width: 320px) {
 	.text__title {
 	font-size:38px;
+	font-family: "Bebas Neue";
 	font-weight: 400;
 	color: #222323;
 	line-height: 40px;
 	margin: 0px 0px 20px 0px;
 	}
+	
 }
 @media (min-width: 768px) {
 	.text__title {
 		font-size: 45px;
 	}
-}
+	}
 	@media (min-width: 992px) {
 		.text__title {
 			font-size: 52px;
@@ -62,12 +61,12 @@
 	align-items: center;
 	min-width: 7%;
 	height: 2px;
-	background-color: var(--line);
+	background-color: #e0e0e0;
 	margin: 0px 0px 20px 0px;
 }
 
 .text__subtitle {
-	font-family: "PT Sans", sans-serif;
+	font-family: "PT Sans";
 	color: var(--gray-color);
 	font-size: 20px;
 }
@@ -75,21 +74,24 @@
 .main-collection__block {
 }
 .shop {
+
 }
 .shop__menu {
 margin: 0px 0px 30px 0px;
-border-bottom: 1px solid rgba(145, 145, 145, 0.467);
+border-bottom: 1px solid #a7a7;
 }
+
 .shop__list {
 	display: flex;
 	justify-content:center;
+	/*padding: 0px 0px 20px 0px;*/
+
 }
 .shop__list li{
 font-size: 16px;
-font-family: "PT Sans", sans-serif;
+font-family: "PT Sans";
 color:#a7a7a7;
 position: relative;
-list-style: none;
 }
 
 .shop__link {
@@ -116,12 +118,11 @@ background-color: var(--accent-signal-color);
 .shop__item-women {
 display: inline-block;
 padding: 0px 10px;
-/*text-align: center;*/
 }
 .card {
 	display: flex;
 	flex-direction: column;
-	color:--dark-color;
+	color:black;
 }
 
 @media (min-width: 768px ){
@@ -139,8 +140,10 @@ padding: 0px 10px;
 	}
 }
 
+
 @media (min-width: 992px){
 	.shop__item-women {
+		display: flex;
 		flex-wrap: nowrap;
 	}
 	.card{
@@ -151,46 +154,51 @@ padding: 0px 10px;
 		flex: 0 1 33.333%;
 	}
 }
+
+
 .card__img {
+	/*max-width: 100%;*/
 	margin: 0px 0px 10px 0px;
 }
 .block-img img{
+	/*max-width: 100%;*/
+
 }
 .card__img{
 	display: inline-block;
 }
 .card__img img{
 	max-width: 100%;
+
+	/*object-fit:cover;*/
 }
 
 .card__text {
 	font-size: 18px;
-	font-family: "PT Sans", sans-serif;
+	font-family: "PT Sans";
 	color:var(--gray-color);	
 	text-transform: capitalize;
 	margin: 0px 0px 30px 0px;
 }
-.card__text:hover{
-text-decoration:underline;
-}
 .card__price {
 	font-size: 18px;
-	font-family: "PT Sans", sans-serif;
+	font-family: "PT Sans";
 	color: var(--accent-signal-color);
 	font-weight: 600;
 	margin: 0px 0px 20px 0px;
+
 }
 .card__link{
 	display: inline-block;
 	font-size: 15px;
-	font-family: "PT Sans", sans-serif;
-	color: #fff;
+	font-family: "PT Sans";
+	color:var(--light-color);
 	max-width: 150px;
 	font-weight: 500;
 	padding: 10px 30px;
-	background-color: var(--dark-color);
+	background-color: #222323;
 	margin: 0px 0px 20px 0px;
 }
 .card__link:hover{
-background-color: var(--accent-signal-color);
+background-color:var(--accent-signal-color);
 }
