--- a/css/common.css
+++ b/css/common.css
@@ -1,17 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=PT+Sans:wght@400;700&display=swap');
- 
+
 :root {
   font-family: 'Bebas Neue', sans-serif;
   --light-color: #FFFFFF;
   --dark-color: #222222;
   --accent-signal-color: #FF0000;
   --accent-text-color: #F00000;
-  --accent-back-color:#d00000;
-	--primary-text-color:#777777;  
+  --accent-back-color: #d00000;
+  --primary-text-color: #777777;
   --secondary-text-color: rgba(33, 33, 33, 0.5);
   --tertiary-text-color: rgba(255, 255, 255, 0.6);
-	--line:#e0e0e0;
-
+  --line: #e0e0e0;
 }
 
 img {
@@ -25,13 +24,23 @@ a {
 }
 
 .base__container {
-    width: 100%;
-    max-width: 1320px;
-    margin: 0 auto;
-    padding: 0 15px;
-  }
-
-  .base__span {
-    color: var(--accent-text-color);
+  width: 100%;
+  max-width: 1320px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
 
+.base__span {
+  color: var(--accent-text-color);
+}
+
+.base__button {
+  background-color: var(--accent-signal-color);
+  padding: 16px 32px;
+  color: var(--light-color);
+  font-family: "PT Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  text-decoration: none;
+  transition: 0.5s;
+}
