--- a/css/index-main-sale.css
+++ b/css/index-main-sale.css
@@ -1,40 +1,43 @@
 .sale__cards {
-    display: flex;
-    gap: 20px;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  
-  .sale__card, .sale__card-img {
-    width: 100%;
-    min-width: 272px;
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 
-  }
-  
-  .sale__card {
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
-  }
-  
-  .sale__card-link, .sale__card-price {
-    font-family: "PT Sans", sans-serif;
-    color: #717474;
-    font-size: 20px;
-    font-weight: 400;
-  }
-  
-  .sale__card-price {
-    color: var(--accent-text-color);
-    font-weight: 700;
-  }
-  
-  .sale__input-button {
-    align-self: start;
-    background-color: var(--black-color);
-    padding: 16px 32px;
-    color: var(--white-text-color);
-    font-family: "PT Sans", sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-  }
+.sale__card,
+.sale__card-img {
+  width: 100%;
+  min-width: 272px;
+
+}
+
+.sale__card {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 24px;
+}
+
+.sale__card-link,
+.sale__card-price {
+  font-family: "PT Sans", sans-serif;
+  color: #717474;
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.sale__card-price {
+  color: var(--accent-text-color);
+  font-weight: 700;
+}
+
+.base__button {
+  background-color: var(--dark-color);
+}
+
+/* додати js на кнопки, щоб робити їх червоно кольору при натисканні і додованні в корзину */
+div.sale__card > .base__button-active {
+  background-color: var(--accent-signal-color);
+  transition: 0.5s;
+}
