--- a/css/index-main-collection.css
+++ b/css/index-main-collection.css
@@ -66,13 +66,8 @@
 }
 
 .text__subtitle {
-<<<<<<< HEAD
-	font-family: "PT Sans";
-	color: var(--gray-color);
-=======
 	font-family: "PT Sans", sans-serif;
 	color: var(--primary-text-color);
->>>>>>> d22996fc463618b11b499449142f97b14bb75446
 	font-size: 20px;
 }
 /* ===================================================== */
@@ -89,8 +84,6 @@ border-bottom: 1px solid #a7a7;
 .shop__list {
 	display: flex;
 	justify-content:center;
-	/*padding: 0px 0px 20px 0px;*/
-
 }
 .shop__list li{
 font-size: 16px;
@@ -120,7 +113,7 @@ background-color: var(--accent-signal-color);
 /* ================================================================ */
 .shop__items {
 }
-.shop__item-women {
+.shop-about {
 display: inline-block;
 padding: 0px 10px;
 }
@@ -131,7 +124,7 @@ padding: 0px 10px;
 }
 
 @media (min-width: 768px ){
-	.shop__item-women {
+	.shop-about {
 		display: flex;
 		flex-wrap: wrap;
 	}
@@ -145,28 +138,27 @@ padding: 0px 10px;
 	}
 }
 
-
 @media (min-width: 992px){
-	.shop__item-women {
+	.shop-about {
 		display: flex;
 		flex-wrap: nowrap;
 	}
 	.card{
 		flex: 0 0 33.333%;
-		padding: 0px 10px 0px 0px;
+		padding: 0px 25px 0px 0px;
 	}
 	.card:last-child{
 		flex: 0 1 33.333%;
 	}
 }
-
+.shop__item-men, .shop__item-shoes{
+display: none;
+}
 
 .card__img {
-	/*max-width: 100%;*/
 	margin: 0px 0px 10px 0px;
 }
 .block-img img{
-	/*max-width: 100%;*/
 
 }
 .card__img{
@@ -175,7 +167,6 @@ padding: 0px 10px;
 .card__img img{
 	max-width: 100%;
 
-	/*object-fit:cover;*/
 }
 
 .card__text {
@@ -184,6 +175,9 @@ padding: 0px 10px;
 	color:var(--primary-text-color);	
 	text-transform: capitalize;
 	margin: 0px 0px 30px 0px;
+}
+.card__text a:hover {
+	text-decoration: underline;
 }
 .card__price {
 	font-size: 18px;
