--- a/css/index-deal.css
+++ b/css/index-deal.css
@@ -1,12 +1,14 @@
 .deal__container{
     display: flex;
-    background-color: var(--dark-color);
 }
 .deal__content{ 
-    width: 100%;
-    max-width: 660px;
-    margin: auto auto auto 0;
-    padding: 0 0 0 130px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex: 0 1 50%;
+    flex-wrap: wrap;
+    padding: 0 20px;
+    background-color: var(--dark-color);
 }
 .deal__title{ 
     font-size: 124px;
@@ -17,6 +19,11 @@
     max-width: 462px;
     line-height: 1;
     padding: 0 0 20px 0;
+}
+@media(max-width:960px){ 
+    .deal__title{ 
+        font-size: 93px;
+    }
 }
 .title-dot{ 
     color: var(--accent-text-color);
@@ -103,7 +110,7 @@
     /* object-fit: cover; */
     /* object-position: center calc(50% + 10px) */
 }
-@media(max-width:810px){ 
+@media(max-width:660px){ 
     .deal__container{ 
         display: flex;
         flex-direction: column;
@@ -113,13 +120,6 @@
         object-fit: center;
         height: auto;
         width: 100%;
-    }
-    .deal__countdown{ 
-        flex: 0 1 100%;
-        padding: 0;
-        display: flex;  
-        align-items: center;
-        justify-content: center;
     }
     .deal__content{ 
         flex: 0 1 100%;
