--- a/css/index-deal.css
+++ b/css/index-deal.css
@@ -61,14 +61,34 @@
     text-decoration: none;
     color: var(--light-color);
     display: inline-block;
-    padding: 0 0 43px 0;
+    padding: 0 0 15px 0;
     font-family:"PT Sans", sans-serif;
+}
+.deal__link {
+    display: inline-block;
+    position: relative;
+}
+.deal__link::after{ 
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform:scaleX(0);
+    height: 1.5px;
+    bottom: -1.5px;
+    left: 0;
+    background-color: #fff;
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+}
+.deal__link:hover::after{
+    transform: scaleX(1);
+    transform-origin: bottom left;
 }
 .deal-arrow{ 
     background: url(../img/deal-of-the-month/Arrow.svg) right no-repeat;
     padding: 0 25px 0 0;
 }
-.deal__countdown{ 
+/* .deal__countdown{ 
     display: flex;
     padding: 0 20px 0 0;
     flex-wrap: wrap;
@@ -99,14 +119,17 @@
     text-align: center;
     opacity:50%;
     font-family:"PT Sans", sans-serif;
-}
+} */
 .deal__image {
     flex: 0 1 50%;
     overflow: hidden;
 }
 .deal__image img{ 
+    display: block;
+    height: 950px;
+    object-fit: cover;
+    object-position: 50% 25%;
     width: 100%;
-    height: 100%;
     /* object-fit: cover; */
     /* object-position: center calc(50% + 10px) */
 }
