--- a/css/index-main-choose.css
+++ b/css/index-main-choose.css
@@ -1,4 +1,5 @@
-.choose-us, .sale {
+.choose-us,
+.sale {
     padding-top: 110px;
     padding-bottom: 120px;
 }
@@ -35,15 +36,28 @@
 }
 
 .choose-us__flex-box {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: 1fr;
+    /* flex-wrap: wrap; */
     gap: 25px;
     justify-content: center;
 }
 
+@media (min-width: 768px) {
+    .choose-us__flex-box {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (min-width: 991px) {
+    .choose-us__flex-box {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+}
+
 .flex-box__item {
     width: 100%;
-    max-width: 266px;
+    max-width: 600px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -51,6 +65,7 @@
     padding: 20px 30px;
     border: 2px solid #ebebeb;
 }
+
 
 .flex-box__svg {
     width: 100%;
