--- a/css/index-main-choose.css
+++ b/css/index-main-choose.css
@@ -87,8 +87,20 @@
 
 .flex-box__h3 {
     text-transform: uppercase;
-    font-size: 24px;
+    font-size: 22px;
     font-weight: 400;
+}
+
+@media (min-width: 768px) {
+    .flex-box__h3 {
+        font-size: 23px;
+    }
+}
+
+@media (min-width: 991px) {
+    .flex-box__h3 {
+        font-size: 24px;
+    }
 }
 
 .flex-box__paragraph {
