add media in sale section

--- a/css/index-main-choose.css
+++ b/css/index-main-choose.css
@@ -64,7 +64,7 @@
 
 @media (min-width: 991px) {
     .choose-us__flex-box {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-columns: repeat(4, 1fr);
     }
 }
 
