--- a/css/index-footer.css
+++ b/css/index-footer.css
@@ -1,11 +1,11 @@
 section.footer__container {
-    border: 1px red solid;
+    width: 100%;
     font-family: 'Bebas Neue', sans-serif;
 }
 .footer__container__top {
     background-image: url(../img/footer-background.jpg);
     background-size: cover;
-    background-position: 75% 25%;
+    background-position: 45% ;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -13,15 +13,17 @@ section.footer__container {
     
 }
 .container__top__inside__empty {
-    margin: 20px; 
+    margin:auto; 
 }
 
 .container__top__inside__first-order {
     display: flex;
     flex-direction: row;
     margin: 20px; 
-
-
+}
+.first-order__inside__icon {
+    width: 30px;
+    height: 30px;
 }
 
 .footer__ten__procent {
@@ -42,18 +44,17 @@ section.footer__container {
 .form__email {
     margin: 10px;
     padding: 15px 26px;
-    height: 20px;
-    min-width: 220px;
+    min-height: 20px;
+    min-width: 270px;
     background-color: var(--line);
 }
 #form__button {
     margin: 10px;
     padding: 15px 26px;
-    height: 20px;
-    min-width: 220px;
+    min-height: 20px;
+    min-width: 270px;
     background-color: var(--accent-signal-color);
-    text-align: center;
-    align-items: center;
+    
 }
 .footer__container__middle {
     border: 1px white solid;
@@ -94,4 +95,12 @@ section.footer__container {
 
 .footer__social {
     color: var(--light-color);
+    height: 30px;
+    width: 30px;
+    background-color: var(--accent-signal-color);
+    transition: 0.3s;
+}
+.footer__social:hover {
+    background-color: var(--light-color);
+    transition: 0.5s;
 }
