--- a/css/index-footer.css
+++ b/css/index-footer.css
@@ -6,30 +6,37 @@ section.footer__container {
     background-image: url(../img/footer-background.jpg);
     background-size: cover;
     background-position: 45% ;
+    width: 100%;
+    padding: 45px 24px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    
 }
-.container__top__inside__empty {
-    margin:auto; 
+. container__top__inside__empty {
+    margin-bottom: 30px;
 }
 
 .container__top__inside__first-order {
     display: flex;
     flex-direction: row;
-    margin: 20px; 
+    justify-content: center; 
+    width: 100%;
+    padding: 0px 10px;
+    margin-top: 50px;
+    
 }
 .first-order__inside__icon {
     width: 30px;
     height: 30px;
+    margin-right: 15px;
 }
 
 .footer__ten__procent {
     color: var(--accent-signal-color);
     width: bold;
     font-size: 21px;
+    margin-right: 10px;
 }
 .first-order__text {
     width: bold;
@@ -39,7 +46,8 @@ section.footer__container {
 .container__top__inside__form {
     display: flex;
     flex-direction: column;
-    margin: 20px; 
+    margin-top: 50px;
+    width: 100%;
 }
 .form__email {
     margin: 10px;
